index.css
/* ... */
@keyframes music_block_title_move_in {
	0% {
		right: -500px;
	} 100 {
		right: 75px;
	}
}
#music_block_title h1 {
	font-size: 72pt;
    font-family: "Zilla Slab", Verdana, Geneva, Tahoma, sans-serif;
    /* font-family: "Alegreya SC", Verdana, Geneva, Tahoma, sans-serif; */
    font-weight: 500;
	margin-bottom: -30px;
}
#music_block_title p {
	font-size: 18pt;
	font-family: 'Kreon', 'Trebuchet MS', Cambria, Cochin, Times, 'Times New Roman', serif;
}
#cd {
	position: absolute;
	height: 800px;
	right: -300px;
	bottom: -450px;
	opacity: 0.3;
	animation: cd_rotate 30s infinite linear, cd_move_in 0.75s cubic-bezier(.26,.8,.51,1.07);
	z-index: -10;
	transition: 0.5s;
}
@keyframes cd_move_in {
	0% {
		right: -1000px;
	} 100% {
		right: -300px;
	}
}
@keyframes cd_rotate {
    0% {
        transform: rotateZ(0deg);
    } 100% {
        transform: rotateZ(-360deg);
    }
}
#album_block {
	position: absolute;
	width: 100%;
	height: 100%;
	animation: album_block_move_in 0.75s ease;
	transition: 0.3s;
	top: 0%;
}
@keyframes album_block_move_in {
	0% {
		top: -100%;
	} 100% {
		top: 0%;
	}
}
#album_holder {
	/*height: min(calc(100% - 200px), 550px);*/
	height: 500px;
	aspect-ratio: 1;
	background-size: cover;
	position: absolute;
	left: 75px;
	top: 10%;
	bottom: 10%;
	perspective: 1000px;
	transform-style: preserve-3d; 
}
#album_section_title {
	font-size: 18pt;
	font-family: 'Ysabeau Infant', 'Trebuchet MS', Cambria, Cochin, Times, 'Times New Roman', serif;
	letter-spacing: -1px;
	position: absolute;
	font-weight: 400;
	margin-top: -7%;
	color: rgba(150, 150, 222, 0.8);
	width: 150%;
}
#album_section_title span {
	transition: 0.3s;
	cursor: pointer;
}
#album_section_title span:hover {
	color: rgba(200, 200, 255, 0.9);
}
.album_section_title_active {
	font-size: 24pt;
	font-weight: 700;
	color: rgba(200, 200, 255, 0.9);
}

#album {
	width: 100%;
	height: 100%;
	position: absolute;
	background-color: rgba(255, 255, 255, 0.1);
	background-size: cover;
	transform-style: preserve-3d;
	display: block;
	background-image: url('assets/albums/classical_compositions_solo.jpg');
}
#album * {
	position: absolute;
	margin: 0px;
	user-select: none;
	
}
.album_classical_compositions_solo * {
	font-family: 'Sofia Sans Extra Condensed';
	text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
	text-align: right;
	transform: translateZ(30px);
}
.album_classical_compositions_solo div {
	top: 15px;
	right: 15px;
	width: 60px;
	height: 120px;
	background-image: url('assets/seal_two.png');
	background-repeat: no-repeat;
	background-size: cover;
	filter: drop-shadow(0px, 0px, 5px, rgba(255, 0, 0, 0.3));
}

.album_classical_compositions_solo h1:after { content: 'Compositions'; }
.album_classical_compositions_solo h2:after { content: 'Classical'; }
.album_classical_compositions_solo h3:after { content: 'Soloist'; }

.album_classical_compositions_solo h1 {
	font-size: 72pt;
	font-weight: 500;
	color: white;
	right: 35px;
	bottom: 10px;
}
.album_classical_compositions_solo h2 {
	font-size: 48pt;
	font-weight: 300;
	color: white;
	right: 215px;
	bottom: 80px;
}
.album_classical_compositions_solo h3 {
	font-size: 28pt;
	font-weight: 300;
	color: white;
	right: 365px;
	bottom: 105px;
}
.album_classical_arrangements h1, .album_classical_arrangements h2 {
	background-image: url("assets/gold.jpg");
	background-size: 350%;
    background-clip: text;
    -webkit-background-clip: text;
}
.album_classical_arrangements h1:after { content: 'Arrangements'; }
.album_classical_arrangements h2:after { content: 'of Classical Music'; }
.album_classical_arrangements h3:after { content: 'Richard Yin'; }

.album_classical_arrangements h1 {
	transform: translateZ(30px);
	color: rgba(255, 255, 200, 0.5);
	font-family: 'Friz Quadrata No. 2 W01';
}
.album_classical_arrangements h2 {
	transform: translateZ(25px);
	font-family: 'Ysabeau Infant';
	color: rgba(150, 150, 50, 0.5);
	font-weight: 400;
	font-style: italic;
}
.album_classical_arrangements h3 {
	transform: translateZ(15px);
	font-family: 'Friz Quadrata No. 2 W01';
	color: rgba(255, 200, 150, 0.4);
	font-weight: 400;
}
.album_classical_arrangements div {
	transform: translateZ(10px);
	background-color: rgba(0, 0, 0, 0.3);
	z-index: -2;
}


#album_descriptions:before {
	content: ' ';
	position: absolute;
	width: 100%;
	height: 125%;
	left: 0;
	top: 0;
	background-image: url("assets/paper_mask_2.png");
	background-size: 100% 100%;
	background-repeat: no-repeat;
	opacity: 0.8;
	display: block;
	z-index: -1;
	transform: scale(1);
}
#album_descriptions {
	height: calc(100% - 300px);
	width: calc(100% - 545px);
	aspect-ratio: 1;
	position: absolute;
	right: 75px;
	top: 75px;
	padding-left: 50px;
	padding-right: 50px;
	padding-top: 25px;
	padding-bottom: 25px;
	transform: rotateX(-10deg) rotateY(10deg);
	white-space: nowrap;
}
#album_descriptions h2 {
	font-size: 42pt;
	font-family: 'IM Fell DW Pica', Brush Script MT, Georgia, Times, 'Garamond', 'Times New Roman', serif;
	font-style: italic;
	font-weight: normal;
	margin-bottom: 15px;
	margin-top: 30px;
}
#album_descriptions h2:after {
	content: '';
	left: 0;
	margin-left: 50px;
	margin-top: 60px;
	width: calc(100% - 120px);
	height: 5px;
	background-image: url("assets/line.png");
	background-size: 100% 100%;
	background-repeat: no-repeat;
	position: absolute;
	opacity: 0.8;
}
#album_descriptions table {
	border-collapse: collapse;
	table-layout: fixed;
	width: 100%;
}
#album_descriptions tr:not(:first-child):after {
	content: 'a';
	color: rgba(0, 0, 0, 0);
	position: absolute;
	left: 20px;
	/* background-image: linear-gradient(to right, rgba(255, 0, 0, 0.2) 0%, rgba(255, 0, 0, 0) 100%); */
	background-image: url('assets/album_hovermask_cropped.png');
	background-size: 100% 100%;
	font-size: 16pt;
	width: 85%;
	font-family: 'Cardo', 'Palatino', Gill Sans, Tahoma, sans-serif;	
	opacity: 0;
	transition: 0.3s;
	z-index: -1;
	user-select: none;
	pointer-events: none;
}
/* ... */

